Filled the missing values by mean

--- a/train.ipynb
+++ b/train.ipynb
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
        "      <th>ndvi_se</th>\n",
        "      <th>ndvi_sw</th>\n",
        "      <th>precipitation_amt_mm</th>\n",
-       "      <th>reanalysis_air_temp_c</th>\n",
+       "      <th>reanalysis_air_temp_k</th>\n",
        "      <th>...</th>\n",
        "      <th>reanalysis_precip_amt_kg_per_m2</th>\n",
        "      <th>reanalysis_relative_humidity_percent</th>\n",
@@ -613,20 +613,178 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>sj</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>23</td>\n",
+       "      <td>1990-06-04</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.174850</td>\n",
+       "      <td>0.254314</td>\n",
+       "      <td>0.181743</td>\n",
+       "      <td>9.58</td>\n",
+       "      <td>299.630000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>26.49</td>\n",
+       "      <td>79.891429</td>\n",
+       "      <td>9.58</td>\n",
+       "      <td>17.212857</td>\n",
+       "      <td>2.100000</td>\n",
+       "      <td>28.114286</td>\n",
+       "      <td>6.942857</td>\n",
+       "      <td>34.4</td>\n",
+       "      <td>23.9</td>\n",
+       "      <td>39.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>sj</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>27</td>\n",
+       "      <td>1990-07-02</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.121550</td>\n",
+       "      <td>0.160683</td>\n",
+       "      <td>0.202567</td>\n",
+       "      <td>14.41</td>\n",
+       "      <td>300.154286</td>\n",
+       "      <td>...</td>\n",
+       "      <td>28.40</td>\n",
+       "      <td>81.281429</td>\n",
+       "      <td>14.41</td>\n",
+       "      <td>18.071429</td>\n",
+       "      <td>2.014286</td>\n",
+       "      <td>28.328571</td>\n",
+       "      <td>6.514286</td>\n",
+       "      <td>33.9</td>\n",
+       "      <td>24.4</td>\n",
+       "      <td>1.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>sj</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>31</td>\n",
+       "      <td>1990-07-30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.247150</td>\n",
+       "      <td>0.379700</td>\n",
+       "      <td>0.381357</td>\n",
+       "      <td>32.66</td>\n",
+       "      <td>299.862857</td>\n",
+       "      <td>...</td>\n",
+       "      <td>34.60</td>\n",
+       "      <td>80.584286</td>\n",
+       "      <td>32.66</td>\n",
+       "      <td>17.594286</td>\n",
+       "      <td>2.585714</td>\n",
+       "      <td>28.242857</td>\n",
+       "      <td>8.085714</td>\n",
+       "      <td>34.4</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>37.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>sj</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>32</td>\n",
+       "      <td>1990-08-06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.064333</td>\n",
+       "      <td>0.164443</td>\n",
+       "      <td>0.138857</td>\n",
+       "      <td>28.80</td>\n",
+       "      <td>300.391429</td>\n",
+       "      <td>...</td>\n",
+       "      <td>20.00</td>\n",
+       "      <td>79.650000</td>\n",
+       "      <td>28.80</td>\n",
+       "      <td>17.950000</td>\n",
+       "      <td>2.328571</td>\n",
+       "      <td>28.200000</td>\n",
+       "      <td>7.557143</td>\n",
+       "      <td>33.3</td>\n",
+       "      <td>23.3</td>\n",
+       "      <td>11.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>sj</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1990-08-13</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.128033</td>\n",
+       "      <td>0.206957</td>\n",
+       "      <td>0.168243</td>\n",
+       "      <td>90.75</td>\n",
+       "      <td>299.958571</td>\n",
+       "      <td>...</td>\n",
+       "      <td>101.90</td>\n",
+       "      <td>84.178571</td>\n",
+       "      <td>90.75</td>\n",
+       "      <td>18.515714</td>\n",
+       "      <td>1.857143</td>\n",
+       "      <td>28.042857</td>\n",
+       "      <td>6.685714</td>\n",
+       "      <td>32.8</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>44.7</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 24 columns</p>\n",
+       "<p>5 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [city, year, weekofyear, week_start_date, ndvi_ne, ndvi_nw, ndvi_se, ndvi_sw, precipitation_amt_mm, reanalysis_air_temp_c, reanalysis_avg_temp_c, reanalysis_dew_point_temp_c, reanalysis_max_air_temp_c, reanalysis_min_air_temp_c, reanalysis_precip_amt_kg_per_m2, reanalysis_relative_humidity_percent, reanalysis_sat_precip_amt_mm, reanalysis_specific_humidity_g_per_kg, reanalysis_tdtr_k, station_avg_temp_c, station_diur_temp_rng_c, station_max_temp_c, station_min_temp_c, station_precip_mm]\n",
-       "Index: []\n",
+       "   city  year  weekofyear week_start_date  ndvi_ne   ndvi_nw   ndvi_se  \\\n",
+       "5    sj  1990          23      1990-06-04      NaN  0.174850  0.254314   \n",
+       "9    sj  1990          27      1990-07-02      NaN  0.121550  0.160683   \n",
+       "13   sj  1990          31      1990-07-30      NaN  0.247150  0.379700   \n",
+       "14   sj  1990          32      1990-08-06      NaN  0.064333  0.164443   \n",
+       "15   sj  1990          33      1990-08-13      NaN  0.128033  0.206957   \n",
        "\n",
-       "[0 rows x 24 columns]"
+       "     ndvi_sw  precipitation_amt_mm  reanalysis_air_temp_k        ...          \\\n",
+       "5   0.181743                  9.58             299.630000        ...           \n",
+       "9   0.202567                 14.41             300.154286        ...           \n",
+       "13  0.381357                 32.66             299.862857        ...           \n",
+       "14  0.138857                 28.80             300.391429        ...           \n",
+       "15  0.168243                 90.75             299.958571        ...           \n",
+       "\n",
+       "    reanalysis_precip_amt_kg_per_m2  reanalysis_relative_humidity_percent  \\\n",
+       "5                             26.49                             79.891429   \n",
+       "9                             28.40                             81.281429   \n",
+       "13                            34.60                             80.584286   \n",
+       "14                            20.00                             79.650000   \n",
+       "15                           101.90                             84.178571   \n",
+       "\n",
+       "    reanalysis_sat_precip_amt_mm  reanalysis_specific_humidity_g_per_kg  \\\n",
+       "5                           9.58                              17.212857   \n",
+       "9                          14.41                              18.071429   \n",
+       "13                         32.66                              17.594286   \n",
+       "14                         28.80                              17.950000   \n",
+       "15                         90.75                              18.515714   \n",
+       "\n",
+       "    reanalysis_tdtr_k  station_avg_temp_c  station_diur_temp_rng_c  \\\n",
+       "5            2.100000           28.114286                 6.942857   \n",
+       "9            2.014286           28.328571                 6.514286   \n",
+       "13           2.585714           28.242857                 8.085714   \n",
+       "14           2.328571           28.200000                 7.557143   \n",
+       "15           1.857143           28.042857                 6.685714   \n",
+       "\n",
+       "    station_max_temp_c  station_min_temp_c  station_precip_mm  \n",
+       "5                 34.4                23.9               39.1  \n",
+       "9                 33.9                24.4                1.1  \n",
+       "13                34.4                22.8               37.6  \n",
+       "14                33.3                23.3               11.4  \n",
+       "15                32.8                22.8               44.7  \n",
+       "\n",
+       "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -709,7 +867,7 @@
        " 'reanalysis_min_air_temp_k']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -737,7 +895,7 @@
        "Name: reanalysis_air_temp_k, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +1145,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
