Cities are separated into different DataFrames.

--- a/train.ipynb
+++ b/train.ipynb
@@ -560,242 +560,13 @@
     }
    ],
    "source": [
+    "# Checking columns having null values\n",
     "dengue_features.isna().sum()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>city</th>\n",
-       "      <th>year</th>\n",
-       "      <th>weekofyear</th>\n",
-       "      <th>week_start_date</th>\n",
-       "      <th>ndvi_ne</th>\n",
-       "      <th>ndvi_nw</th>\n",
-       "      <th>ndvi_se</th>\n",
-       "      <th>ndvi_sw</th>\n",
-       "      <th>precipitation_amt_mm</th>\n",
-       "      <th>reanalysis_air_temp_k</th>\n",
-       "      <th>...</th>\n",
-       "      <th>reanalysis_precip_amt_kg_per_m2</th>\n",
-       "      <th>reanalysis_relative_humidity_percent</th>\n",
-       "      <th>reanalysis_sat_precip_amt_mm</th>\n",
-       "      <th>reanalysis_specific_humidity_g_per_kg</th>\n",
-       "      <th>reanalysis_tdtr_k</th>\n",
-       "      <th>station_avg_temp_c</th>\n",
-       "      <th>station_diur_temp_rng_c</th>\n",
-       "      <th>station_max_temp_c</th>\n",
-       "      <th>station_min_temp_c</th>\n",
-       "      <th>station_precip_mm</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>sj</td>\n",
-       "      <td>1990</td>\n",
-       "      <td>23</td>\n",
-       "      <td>1990-06-04</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.174850</td>\n",
-       "      <td>0.254314</td>\n",
-       "      <td>0.181743</td>\n",
-       "      <td>9.58</td>\n",
-       "      <td>299.630000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>26.49</td>\n",
-       "      <td>79.891429</td>\n",
-       "      <td>9.58</td>\n",
-       "      <td>17.212857</td>\n",
-       "      <td>2.100000</td>\n",
-       "      <td>28.114286</td>\n",
-       "      <td>6.942857</td>\n",
-       "      <td>34.4</td>\n",
-       "      <td>23.9</td>\n",
-       "      <td>39.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>sj</td>\n",
-       "      <td>1990</td>\n",
-       "      <td>27</td>\n",
-       "      <td>1990-07-02</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.121550</td>\n",
-       "      <td>0.160683</td>\n",
-       "      <td>0.202567</td>\n",
-       "      <td>14.41</td>\n",
-       "      <td>300.154286</td>\n",
-       "      <td>...</td>\n",
-       "      <td>28.40</td>\n",
-       "      <td>81.281429</td>\n",
-       "      <td>14.41</td>\n",
-       "      <td>18.071429</td>\n",
-       "      <td>2.014286</td>\n",
-       "      <td>28.328571</td>\n",
-       "      <td>6.514286</td>\n",
-       "      <td>33.9</td>\n",
-       "      <td>24.4</td>\n",
-       "      <td>1.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>sj</td>\n",
-       "      <td>1990</td>\n",
-       "      <td>31</td>\n",
-       "      <td>1990-07-30</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.247150</td>\n",
-       "      <td>0.379700</td>\n",
-       "      <td>0.381357</td>\n",
-       "      <td>32.66</td>\n",
-       "      <td>299.862857</td>\n",
-       "      <td>...</td>\n",
-       "      <td>34.60</td>\n",
-       "      <td>80.584286</td>\n",
-       "      <td>32.66</td>\n",
-       "      <td>17.594286</td>\n",
-       "      <td>2.585714</td>\n",
-       "      <td>28.242857</td>\n",
-       "      <td>8.085714</td>\n",
-       "      <td>34.4</td>\n",
-       "      <td>22.8</td>\n",
-       "      <td>37.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>sj</td>\n",
-       "      <td>1990</td>\n",
-       "      <td>32</td>\n",
-       "      <td>1990-08-06</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.064333</td>\n",
-       "      <td>0.164443</td>\n",
-       "      <td>0.138857</td>\n",
-       "      <td>28.80</td>\n",
-       "      <td>300.391429</td>\n",
-       "      <td>...</td>\n",
-       "      <td>20.00</td>\n",
-       "      <td>79.650000</td>\n",
-       "      <td>28.80</td>\n",
-       "      <td>17.950000</td>\n",
-       "      <td>2.328571</td>\n",
-       "      <td>28.200000</td>\n",
-       "      <td>7.557143</td>\n",
-       "      <td>33.3</td>\n",
-       "      <td>23.3</td>\n",
-       "      <td>11.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>sj</td>\n",
-       "      <td>1990</td>\n",
-       "      <td>33</td>\n",
-       "      <td>1990-08-13</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.128033</td>\n",
-       "      <td>0.206957</td>\n",
-       "      <td>0.168243</td>\n",
-       "      <td>90.75</td>\n",
-       "      <td>299.958571</td>\n",
-       "      <td>...</td>\n",
-       "      <td>101.90</td>\n",
-       "      <td>84.178571</td>\n",
-       "      <td>90.75</td>\n",
-       "      <td>18.515714</td>\n",
-       "      <td>1.857143</td>\n",
-       "      <td>28.042857</td>\n",
-       "      <td>6.685714</td>\n",
-       "      <td>32.8</td>\n",
-       "      <td>22.8</td>\n",
-       "      <td>44.7</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 24 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   city  year  weekofyear week_start_date  ndvi_ne   ndvi_nw   ndvi_se  \\\n",
-       "5    sj  1990          23      1990-06-04      NaN  0.174850  0.254314   \n",
-       "9    sj  1990          27      1990-07-02      NaN  0.121550  0.160683   \n",
-       "13   sj  1990          31      1990-07-30      NaN  0.247150  0.379700   \n",
-       "14   sj  1990          32      1990-08-06      NaN  0.064333  0.164443   \n",
-       "15   sj  1990          33      1990-08-13      NaN  0.128033  0.206957   \n",
-       "\n",
-       "     ndvi_sw  precipitation_amt_mm  reanalysis_air_temp_k        ...          \\\n",
-       "5   0.181743                  9.58             299.630000        ...           \n",
-       "9   0.202567                 14.41             300.154286        ...           \n",
-       "13  0.381357                 32.66             299.862857        ...           \n",
-       "14  0.138857                 28.80             300.391429        ...           \n",
-       "15  0.168243                 90.75             299.958571        ...           \n",
-       "\n",
-       "    reanalysis_precip_amt_kg_per_m2  reanalysis_relative_humidity_percent  \\\n",
-       "5                             26.49                             79.891429   \n",
-       "9                             28.40                             81.281429   \n",
-       "13                            34.60                             80.584286   \n",
-       "14                            20.00                             79.650000   \n",
-       "15                           101.90                             84.178571   \n",
-       "\n",
-       "    reanalysis_sat_precip_amt_mm  reanalysis_specific_humidity_g_per_kg  \\\n",
-       "5                           9.58                              17.212857   \n",
-       "9                          14.41                              18.071429   \n",
-       "13                         32.66                              17.594286   \n",
-       "14                         28.80                              17.950000   \n",
-       "15                         90.75                              18.515714   \n",
-       "\n",
-       "    reanalysis_tdtr_k  station_avg_temp_c  station_diur_temp_rng_c  \\\n",
-       "5            2.100000           28.114286                 6.942857   \n",
-       "9            2.014286           28.328571                 6.514286   \n",
-       "13           2.585714           28.242857                 8.085714   \n",
-       "14           2.328571           28.200000                 7.557143   \n",
-       "15           1.857143           28.042857                 6.685714   \n",
-       "\n",
-       "    station_max_temp_c  station_min_temp_c  station_precip_mm  \n",
-       "5                 34.4                23.9               39.1  \n",
-       "9                 33.9                24.4                1.1  \n",
-       "13                34.4                22.8               37.6  \n",
-       "14                33.3                23.3               11.4  \n",
-       "15                32.8                22.8               44.7  \n",
-       "\n",
-       "[5 rows x 24 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dengue_features[dengue_features['ndvi_ne'].isna()].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -823,22 +594,25 @@
        " 'station_precip_mm']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Getting the list of columns having missing values\n",
     "x = dengue_features.columns[dengue_features.isna().sum() > 0].tolist()\n",
+    "\n",
     "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Filling the missing value with mean\n",
     "for i in x:\n",
     "    dengue_features[i] = dengue_features[i].fillna(dengue_features[i].mean())"
    ]
@@ -852,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -867,7 +641,7 @@
        " 'reanalysis_min_air_temp_k']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,37 +653,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    24.422857\n",
-       "1    25.061429\n",
-       "2    25.631429\n",
-       "3    25.837143\n",
-       "4    26.368571\n",
-       "Name: reanalysis_air_temp_k, dtype: float64"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in temperature_kelvin_columns:\n",
-    "    dengue_features[i] = dengue_features[i] - 273.15\n",
-    "\n",
-    "dengue_features['reanalysis_air_temp_k'].head()"
+    "    dengue_features[i] = dengue_features[i] - 273.15"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +901,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,10 +914,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    24.70\n",
+       "1    26.95\n",
+       "2    27.50\n",
+       "3    28.30\n",
+       "4    29.45\n",
+       "Name: avg_max_min_temp, dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dengue_features['avg_max_min_temp'] = (dengue_features['station_max_temp_c'] + dengue_features['station_min_temp_c']) / 2\n",
+    "\n",
+    "dengue_features['avg_max_min_temp'].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Combining station_max_temp_c and station_min_temp_c as `avg_station_max_min`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    24.70\n",
+       "1    26.95\n",
+       "2    27.50\n",
+       "3    28.30\n",
+       "4    29.45\n",
+       "Name: avg_station_max_min, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dengue_features['avg_station_max_min'] = (dengue_features['station_max_temp_c'] + dengue_features['station_min_temp_c']) / 2\n",
+    "\n",
+    "dengue_features['avg_station_max_min'].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Combining reanalysis_max_air_temp_c and reanalysis_min_air_temp_c as `avg_analysis_max_min`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    24.70\n",
+       "1    25.50\n",
+       "2    25.75\n",
+       "3    26.05\n",
+       "4    26.55\n",
+       "Name: avg_analysis_max_min, dtype: float64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dengue_features['avg_analysis_max_min'] = (dengue_features['reanalysis_max_air_temp_c'] + dengue_features['reanalysis_min_air_temp_c']) / 2\n",
+    "\n",
+    "dengue_features['avg_analysis_max_min'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Adding total cases\n",
+    "dengue_features['total_cases'] = dengue_labels['total_cases']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The dengue cases of San Juan `sj`  and Iquitos `iq` are not dependent."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_sj = dengue_features[dengue_features['city'] == 'sj']\n",
+    "X_iq = dengue_features[dengue_features['city'] == 'iq']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_sj = X_sj.drop(['city', 'weekofyear', 'week_start_date'], axis=1)\n",
+    "X_iq = X_iq.drop(['city', 'weekofyear', 'week_start_date'], axis=1)"
+   ]
   }
  ],
  "metadata": {
