Tried KNN and RandomForest Regressors.

--- a/train.ipynb
+++ b/train.ipynb
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1277,7 @@
        "[5 rows x 43 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -1497,7 +1497,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1549,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,8 +1560,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. Applying Feature Scaling"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1573,8 +1580,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Time for modelling"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1585,12 +1599,14 @@
        "          weights='uniform')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "\n",
     "sj_knn = KNeighborsRegressor(n_neighbors=5)\n",
     "\n",
     "sj_knn.fit(X_sj_train, y_sj_train)"
@@ -1598,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,19 +1623,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "31.082978723404256\n"
+      "15.86914893617021\n"
      ]
     }
    ],
    "source": [
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
     "print(mean_absolute_error(y_sj_test, y_sj_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iq_scaler = StandardScaler()\n",
+    "X_iq_train = iq_scaler.fit_transform(X_iq_train)\n",
+    "X_iq_test = iq_scaler.transform(X_iq_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsRegressor(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+       "          metric_params=None, n_jobs=None, n_neighbors=5, p=2,\n",
+       "          weights='uniform')"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iq_knn = KNeighborsRegressor(n_neighbors=5)\n",
+    "\n",
+    "iq_knn.fit(X_iq_train, y_iq_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_iq_pred = iq_knn.predict(X_iq_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.701923076923077\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mean_absolute_error(y_iq_test, y_iq_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16.51285946351181"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "sj_ada = RandomForestRegressor(n_estimators=50, max_depth=15)\n",
+    "sj_ada.fit(X_sj_train, y_sj_train)\n",
+    "\n",
+    "y_sj_pred = sj_ada.predict(X_sj_test)\n",
+    "\n",
+    "mean_absolute_error(y_sj_test, y_sj_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.788761909244325"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iq_ada = RandomForestRegressor(n_estimators=50, max_depth=15)\n",
+    "iq_ada.fit(X_iq_train, y_iq_train)\n",
+    "\n",
+    "y_iq_pred = iq_ada.predict(X_iq_test)\n",
+    "\n",
+    "mean_absolute_error(y_iq_test, y_iq_pred)"
    ]
   }
  ],
