Struggling with MAE.

--- a/train.ipynb
+++ b/train.ipynb
@@ -1630,7 +1630,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15.86914893617021\n"
+      "17.53723404255319\n"
      ]
     }
    ],
@@ -1693,7 +1693,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.701923076923077\n"
+      "4.959615384615384\n"
      ]
     }
    ],
@@ -1709,7 +1709,7 @@
     {
      "data": {
       "text/plain": [
-       "16.51285946351181"
+       "18.321961073974627"
       ]
      },
      "execution_count": 38,
@@ -1736,7 +1736,7 @@
     {
      "data": {
       "text/plain": [
-       "5.788761909244325"
+       "5.229646163534634"
       ]
      },
      "execution_count": 39,
@@ -1751,6 +1751,53 @@
     "y_iq_pred = iq_ada.predict(X_iq_test)\n",
     "\n",
     "mean_absolute_error(y_iq_test, y_iq_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tuning the hyperparameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "knn_parameters = [{'algorithm':['ball_tree'], 'leaf_size':[25]},\n",
+    "                  {'algorithm':['kd_tree'], 'leaf_size':[25]},\n",
+    "                  {'algorithm':['brute']}]\n",
+    "\n",
+    "sj_knn_grid_cv = GridSearchCV(estimator=sj_knn, param_grid=knn_parameters,\n",
+    "                              scoring='neg_mean_absolute_error', cv=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-19.066844919786092\n",
+      "{'algorithm': 'ball_tree', 'leaf_size': 25}\n"
+     ]
+    }
+   ],
+   "source": [
+    "sj_knn_grid_cv = sj_knn_grid_cv.fit(X_sj_train, y_sj_train)\n",
+    "\n",
+    "# sj_knn_grid_cv.predict(X_sj_test)\n",
+    "\n",
+    "# mean_absolute_error(y_sj_test, sj_knn_grid_cv.predict(X_sj_test))\n",
+    "print(sj_knn_grid_cv.best_score_)\n",
+    "print(sj_knn_grid_cv.best_params_)"
    ]
   }
  ],
